--- a/DajSveApp/webservice/src/main/AndroidManifest.xml
+++ b/DajSveApp/webservice/src/main/AndroidManifest.xml
@@ -5,5 +5,5 @@
         android:supportsRtl="true">
 
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
