Dodan layout za stavku ponude
Dodavanje layouta za stavku ponude

--- a/DajSveApp/app/build.gradle
+++ b/DajSveApp/app/build.gradle
@@ -30,4 +30,11 @@ dependencies {
 
     compile project (':core')
     compile project (':webservice')
+
+    // expandable recycler
+    compile 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
+
+// recycler
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
 }
