--- a/DajSveApp/app/build.gradle
+++ b/DajSveApp/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
 // recycler
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
