--- a/DajSveApp/app/build.gradle
+++ b/DajSveApp/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+
+//def dbflow_version = "3.1.1"
 
 android {
     compileSdkVersion 24
@@ -28,6 +31,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:24.2.1'
 
+    compile project (':database')
     compile project (':core')
     compile project (':webservice')
 
@@ -38,4 +42,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+
 }
