Zapisivanje gradova u bazu
Problem je kod ponuda, treba nekako srediti onaj FlowManager, tako da se
moze sejvati u svakoj klasi a ne samo u Main

--- a/DajSveApp/database/build.gradle
+++ b/DajSveApp/database/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
 
+    //DBFlow ORM
     apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
