--- a/DajSveApp/app/build.gradle
+++ b/DajSveApp/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'com.android.application'
 
 //def dbflow_version = "3.1.1"
 
@@ -48,5 +49,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
-
+    compile 'com.android.support:support-v4:24.2.1'
 }
