--- a/DajSveApp/app/build.gradle
+++ b/DajSveApp/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile project (':database')
     compile project (':core')
     compile project (':webservice')
+    compile project (':map')
 
     // expandable recycler
     compile 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
