--- a/DajSveApp/app/build.gradle
+++ b/DajSveApp/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.google.android.gms:play-services-maps:9.6.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
 }
