--- a/DajSveApp/app/build.gradle
+++ b/DajSveApp/app/build.gradle
@@ -53,5 +53,8 @@ dependencies {
 
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.google.android.gms:play-services-maps:9.6.1'
+    compile 'com.google.android.gms:play-services-location:9.6.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha2'
+
+    compile 'com.google.maps.android:android-maps-utils:0.4+'
 }
