--- a/DajSveApp/database/build.gradle
+++ b/DajSveApp/database/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+    compile 'com.google.maps.android:android-maps-utils:0.4.4'
+    compile 'com.google.android.gms:play-services-maps:9.6.1'
 }
