Promjena naziva paketa, čišćenje repozitorija
Promijenjen je naziv osnovnog paketa (hr.foi.air.dajsve), maknut je
example, obrisan je nepotrebni direktorij .idea

--- a/DajSveApp/app/build.gradle
+++ b/DajSveApp/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
     defaultConfig {
-        applicationId "com.example.filip.dajsve"
+        applicationId "hr.foi.air.dajsve"
         minSdkVersion 19
         targetSdkVersion 24
         versionCode 1
