--- a/DajSveApp/app/src/main/AndroidManifest.xml
+++ b/DajSveApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.filip.dajsve">
+    package="hr.foi.air.dajsve">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,14 +14,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.SplashScreenActivity" android:theme="@style/Theme.Design.NoActionBar">
+        <activity android:name="hr.foi.air.dajsve.Activities.SplashScreenActivity" android:theme="@style/Theme.Design.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>.Activities.SplashScreenActivity
-        <activity android:name=".Activities.MainActivity"></activity>
+        <activity android:name="hr.foi.air.dajsve.Activities.MainActivity"></activity>
     </application>
 
 </manifest>
