--- a/DajSveApp/app/build.gradle
+++ b/DajSveApp/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha2'
 
     compile 'com.google.maps.android:android-maps-utils:0.4+'
+
+    compile project(':jtds-1.3.1')
 }
