--- a/DajSveApp/app/src/main/AndroidManifest.xml
+++ b/DajSveApp/app/src/main/AndroidManifest.xml
@@ -14,14 +14,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="hr.foi.air.dajsve.Activities.SplashScreenActivity" android:theme="@style/Theme.Design.NoActionBar">
+        <activity android:name="hr.foi.air.dajsve.Activities.SplashScreenActivity" android:theme="@style/Theme.Design.NoActionBar"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>.Activities.SplashScreenActivity
-        <activity android:name="hr.foi.air.dajsve.Activities.MainActivity"></activity>
+        <activity android:name="hr.foi.air.dajsve.Activities.MainActivity"
+            android:launchMode="singleTask"
+            android:configChanges="orientation|screenSize"></activity>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
